--- a/app/views/messages/_side_bar.html.erb
+++ b/app/views/messages/_side_bar.html.erb
@@ -10,7 +10,7 @@
 <div class="rooms">
   <div class="room">
     <div class="room-name">
-      <a href="#">techroom1</a>
+      <%= link_to current_user.name, edit_user_path(current_user) %>
     </div>
   </div>
   <div class="room">
